--- a/my_profile/templates/profile.html
+++ b/my_profile/templates/profile.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+    {% include "ajax_profile_select_shape.html" %}
     {% include "ajax_profile.html" %}
 
 {% endblock %}
