--- a/my_profile/templates/ajax_profile.html
+++ b/my_profile/templates/ajax_profile.html
@@ -4,20 +4,35 @@
         </div>
         <div class="col-xs-12 col-md-8 col-lg-6">
             <div class="card card-block">
-                <h3 class="card-title text-center">Login</h3>
+                <h3 class="card-title text-center">Profile</h3>
                 <form class="form-row">
                     <div class="form-group">
-                        <label for="input_email" class="">Email</label>
-                        <input type="email" class="form-control" id="input_email" placeholder="Email">
+                        <label for="input_height" class="">Height</label>
+                        <input type="text" class="form-control" id="input_height" placeholder="Height">
                     </div>
                     <div class="form-group">
-                        <label for="input_password">Password</label>
-
-                        <input type="password" class="form-control" id="input_password" placeholder="Password">
+                        <label for="input_weight">Weight</label>
+                        <input type="text" class="form-control" id="input_weight" placeholder="Weight">
+                    </div>
+                    <div class="form-group">
+                        <label for="input_waistline">Waistline</label>
+                        <input type="text" class="form-control" id="input_waistline" placeholder="Waistline">
+                    </div>
+                    <div class="form-group">
+                        <label for="input_chest">Chest</label>
+                        <input type="text" class="form-control" id="input_chest" placeholder="Chest">
+                    </div>
+                    <div class="form-group">
+                        <label for="input_age">Age</label>
+                        <input type="text" class="form-control" id="input_age" placeholder="Age">
+                    </div>
+                    <div class="form-group">
+                        <label for="input_gender">Gender</label>
+                        <input type="text" class="form-control" id="input_gender" placeholder="Gender">
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-md-4 col-lg-3 pull-right">
-                            <button type="submit" class="btn btn-primary btn-block">Login</button>
+                            <button type="submit" class="btn btn-primary btn-block">Save</button>
                         </div>
                     </div>
             </div>
