--- a/templates/base_with_nav.html
+++ b/templates/base_with_nav.html
@@ -16,9 +16,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">My Profile</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Setting</a>
-                </li>
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="#">Setting</a>#}
+{#                </li>#}
                 <li class="nav-item pull-right">
                     <a class="nav-link" href="#">Sign up</a>
                 </li>
