--- a/select_schedule/templates/ajax_select_schedule.html
+++ b/select_schedule/templates/ajax_select_schedule.html
@@ -4,9 +4,9 @@
         <h1 type="center-block" class="bg-success bg-lg">SELECT YOUR SCHEDULE</h1>
     </div>
     <div class="row margin-top">
-        <div class="container">
-            <button type="button" class="btn btn-info-outline btn-lg">Workout</button>
-            <button type="button" class="btn btn-danger-outline btn-lg">Nutrient</button>
+        <div class="col-lg">
+            <a type="link" href="http://127.0.0.1:8000/workout_schedule/" class="btn btn-info-outline btn-lg">Workout</a>
+            <a type="link" href="http://127.0.0.1:8000/nutrient_schedule/" class="btn btn-danger-outline btn-lg">Nutrient</a>
         </div>
     </div>
 </div>
