update new design

--- a/my_profile/templates/ajax_profile.html
+++ b/my_profile/templates/ajax_profile.html
@@ -4,31 +4,38 @@
         </div>
         <div class="col-xs-12 col-md-8 col-lg-6">
             <div class="card card-block">
-                <h3 class="card-title text-center">Profile</h3>
+                <h3 class="card-title text-center">Information</h3>
                 <form class="form-row">
                     <div class="form-group">
                         <label for="input_height" class="">Height</label>
-                        <input type="text" class="form-control" id="input_height" placeholder="Height">
+                        <input type="text" class="form-control" id="input_height" placeholder="ex. 145 cm">
                     </div>
                     <div class="form-group">
                         <label for="input_weight">Weight</label>
-                        <input type="text" class="form-control" id="input_weight" placeholder="Weight">
+                        <input type="text" class="form-control" id="input_weight" placeholder="ex. 50 kg">
                     </div>
                     <div class="form-group">
                         <label for="input_waistline">Waistline</label>
-                        <input type="text" class="form-control" id="input_waistline" placeholder="Waistline">
+                        <input type="text" class="form-control" id="input_waistline" placeholder="ex. 30 inches">
                     </div>
                     <div class="form-group">
-                        <label for="input_chest">Chest</label>
-                        <input type="text" class="form-control" id="input_chest" placeholder="Chest">
+                        <label for="input_hip">Hip</label>
+                        <input type="text" class="form-control" id="input_hip" placeholder="ex. 33 inches">
                     </div>
                     <div class="form-group">
                         <label for="input_age">Age</label>
-                        <input type="text" class="form-control" id="input_age" placeholder="Age">
+                        <input type="text" class="form-control" id="input_age" placeholder="ex. 25 year old">
                     </div>
+                    {#                    <div class="form-group">#}
+                    {#                        <label for="input_gender">Gender</label>#}
+                    {#                        <input type="text" class="form-control" id="input_gender" placeholder="Gender">#}
+                    {#                    </div>#}
                     <div class="form-group">
                         <label for="input_gender">Gender</label>
-                        <input type="text" class="form-control" id="input_gender" placeholder="Gender">
+                        <select class="c-select">
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                        </select>
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-md-4 col-lg-3 pull-right">
