--- a/my_profile/templates/profile.html
+++ b/my_profile/templates/profile.html
@@ -1,7 +1,9 @@
 {% extends 'base_with_nav.html' %}
 
 {% block content %}
-
+    <div class="text-center">
+        <h1 type="center-block" style="background: #e67e22; color: white; padding: 100px;">MY PROFILE</h1>
+    </div>
     {% include "ajax_profile_select_shape.html" %}
     {% include "ajax_profile.html" %}
 
