--- a/nutrient_schedule/templates/ajax_nutrient_schedule.html
+++ b/nutrient_schedule/templates/ajax_nutrient_schedule.html
@@ -1,39 +1,41 @@
 
-<div class="text-center margin-top">
+<div class="text-center">
+    <h1 type="center-block" style="background: #9b59b6; color: white;; padding: 100px;">NUTRIENT TABLE</h1>
     <div class="container margin-top">
-        <h1 type="center-block" class="bg-success bg-lg">NUTRIENT</h1>
-    </div>
-    <div class ="container">
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Protein</th>
-                <th>Fat</th>
-                <th>Vitamin</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row"></th>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th scope="row"></th>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th scope="row"></th>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
+{#        <h1 type="center-block" class="bg-success bg-lg">NUTRIENT</h1>#}
+
+
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Protein</th>
+                    <th>Fat</th>
+                    <th>Vitamin</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th scope="row"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th scope="row"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                </tbody>
+            </table>
+
     </div>
 </div>
 <div class="col-md-2 col-lg-3">
