--- a/select_schedule/templates/ajax_select_schedule.html
+++ b/select_schedule/templates/ajax_select_schedule.html
@@ -1,12 +1,27 @@
-
-<div class="text-center margin-top">
+<div class="text-center">
+    <h1 type="center-block" style="background: #16a085; color: white;; padding: 100px;">SELECT YOUR SCHEDULE</h1>
     <div class="container margin-top">
-        <h1 type="center-block" class="bg-success bg-lg">SELECT YOUR SCHEDULE</h1>
-    </div>
-    <div class="row margin-top">
-        <div class="col-lg">
-            <a type="link" href="http://127.0.0.1:8000/workout_schedule/" class="btn btn-info-outline btn-lg">Workout</a>
-            <a type="link" href="http://127.0.0.1:8000/nutrient_schedule/" class="btn btn-danger-outline btn-lg">Nutrient</a>
+        <div class="row">
+            <div class="col-xs-12 col-md-8 col-lg-6">
+                <div class="card card-block">
+                    <div class="col-lg">
+                        <div class="text-center">
+                            <img src="http://www.isabelsmithnutrition.com/wp-content/uploads/2015/03/workout-buddy.jpeg" style="height: 200px;">
+                            <a type="link" href="http://127.0.0.1:8000/workout_schedule/" class="btn btn-info-outline btn-lg">Workout</a>
+                        </div>
+                    </div>
+                </div>
+                </div>
+                <div class="col-xs-12 col-md-8 col-lg-6">
+                    <div class="card card-block">
+                        <div class="text-center">
+                            <img src="https://image.freepik.com/free-vector/4-cute-cartoon-fruits_62147501049.jpg" style="height: 200px;">
+                            <a type="link" href="http://127.0.0.1:8000/nutrient_schedule/" class="btn btn-danger-outline btn-lg">Nutrient</a>
+                        </div>
+                    </div>
+                </div>
+                {#                <a type="link" href="http://127.0.0.1:8000/nutrient_schedule/" class="btn btn-danger-outline btn-lg">Nutrient</a>#}
+            </div>
         </div>
     </div>
 </div>
