--- a/templates/base_with_nav.html
+++ b/templates/base_with_nav.html
@@ -2,7 +2,9 @@
 
 {% block nav %}
     <div class="container text-center">
-        <h1>Trainer +</h1>
+{#        <h1>Trainer +</h1>#}
+    <img src="http://www.mx7.com/i/838/2JoHVd.png" style="height: 100px;">
+    <span>Trainer +</span>
     </div>
     <nav class="navbar navbar-dark bg-inverse" style="border-radius: 0px">
         <div class="container ">
