--- a/workout_schedule/templates/ajax_workout_schedule.html
+++ b/workout_schedule/templates/ajax_workout_schedule.html
@@ -1,18 +1,18 @@
 
-<div class="text-center margin-top">
+<div class="text-center">
+    <h1 type="center-block" style="background: #c0392b; color: white;; padding: 100px;">WORKOUT PROGRAMS</h1>
     <div class="container margin-top">
-        <h1 type="center-block" class="bg-success bg-lg">WORKOUT PROGRAMS</h1>
-    </div>
-    <div class ="container">
-    <table class="table table-striped">
-        <thead>
+{#        <h1 type="center-block" class="bg-success bg-lg">WORKOUT PROGRAMS</h1>#}
+
+        <table class="table table-striped">
+            <thead>
             <tr>
                 <th>Date</th>
                 <th>Workout</th>
                 <th>Time</th>
             </tr>
-        </thead>
-        <tbody>
+            </thead>
+            <tbody>
             <tr>
                 <th scope="row"></th>
                 <td></td>
@@ -28,8 +28,8 @@
                 <td></td>
                 <td></td>
             </tr>
-        </tbody>
-    </table>
+            </tbody>
+        </table>
     </div>
 </div>
 <div class="col-md-2 col-lg-3">
